--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "events",
-  "id": "events",
+  "name": "events-es6",
+  "id": "events-es6",
   "version": "1.1.1",
   "description": "Node's event emitter for all engines.",
   "keywords": [
@@ -9,24 +9,28 @@
     "eventDispatcher",
     "listeners"
   ],
-  "author": "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)",
+  "author": "John Vilk <jvilk@cs.umass.edu>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Gozala/events.git",
-    "web": "https://github.com/Gozala/events"
+    "url": "git://github.com/jvilk/events-es6.git",
+    "web": "https://github.com/jvilk/events-es6"
   },
   "bugs": {
-    "url": "http://github.com/Gozala/events/issues/"
+    "url": "http://github.com/jvilk/events-es6/issues/"
   },
   "main": "./events.js",
+  "jsnext:main": "./events-es6.js",
   "engines": {
     "node": ">=0.4.x"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
     "mocha": "~1.21.4",
     "zuul": "~1.10.2"
   },
   "scripts": {
+    "prepublish": "babel events-es6.js --presets babel-preset-es2015 --out-file events.js",
     "test": "mocha --ui qunit -- tests/index.js && zuul -- tests/index.js"
   },
   "license": "MIT"
